# blog-revton

./: README.md  archives.html  authors.html  bio.html  bioposs.html  categories.html  index.html  meu-portfolio.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: revton-braga.html
category/: home-page.html  pagina-inicial.html
content/: index.md
output/: archives.html  authors.html  categories.html  index.html  meu-portfolio.html  tags.html
output/author/: revton-braga.html
output/category/: pagina-inicial.html
