[tool.poetry]
name = "blog-revton"
version = "0.1.0"
description = ""
authors = ["Revton Braga <revtonbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pelican = {extras = ["markdown"], version = "^4.9.1"}


[tool.poetry.group.dev.dependencies]
commitizen = "^3.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
